--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,6 @@
 {
-    "site_title": "EnjoyIngredients",
     "navbar_categories": "Categories",
-    "navbar_about": "About me"
+    "navbar_about": "About me",
+
+    "footer_made_with_hunger": "Made with hunger"
 }
