Add more translation keys

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -6,9 +6,15 @@
     "category_drinks": "Getränke",
     "category_pasta_and_pizza": "Pasta & Pizza",
     "category_appetizers": "Vorspeisen",
+    "category_getting_started": "Getting Started",
 
     "navbar_categories": "Kategorien",
     "navbar_about": "Über mich",
 
-    "footer_made_with_hunger": "Mit Hunger gemacht"
+    "startpage_more_posts": "Mehr Posts",
+
+    "footer_made_with_hunger": "Mit Hunger gemacht",
+
+    "seo_categories_title": "Kategorieübersicht",
+    "seo_categories_description": "Eine Übersicht aller Posts und Kategorien, aus der Du dir immer etwas Leckeres aussuchen kannst"
 }
