Update footer text

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,7 +13,7 @@
 
     "startpage_more_posts": "More posts",
 
-    "footer_made_with_hunger": "Made with hunger",
+    "footer_made_with_hunger": "Created with ❤️",
 
     "seo_categories_title": "Category overview",
     "seo_categories_description": "An overview of all posts and categories where you will always find a tasty recipe"
