--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -13,7 +13,7 @@
 
     "startpage_more_posts": "Mehr Posts",
 
-    "footer_made_with_hunger": "Mit Hunger gemacht",
+    "footer_made_with_hunger": "Mit ❤️ kreiert",
 
     "seo_categories_title": "Kategorieübersicht",
     "seo_categories_description": "Eine Übersicht aller Posts und Kategorien, aus der Du dir immer etwas Leckeres aussuchen kannst"
