--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,4 +1,5 @@
 {
+    "category_none": "Weiteres",
     "category_desserts": "Desserts",
     "category_fish_and_meat": "Fisch & Fleisch",
     "category_breakfast": "Frühstück",
