Add translation for contact text

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -9,6 +9,8 @@
     "category_appetizers": "Vorspeisen",
     "category_getting_started": "Getting Started",
 
+    "contact_us_via_mail": "Schreib uns unter",
+
     "navbar_categories": "Kategorien",
     "navbar_about": "Über mich",
 
