Add two additional category translations

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -4,6 +4,8 @@
     "category_fish_and_meat": "Fisch & Fleisch",
     "category_breakfast": "Frühstück",
     "category_pastries": "Gebäck",
+    "category_pastries_savory": "Herzhaftes Gebäck",
+    "category_pastries_sweet": "Süßes Gebäck",
     "category_drinks": "Getränke",
     "category_pasta_and_pizza": "Pasta & Pizza",
     "category_appetizers": "Vorspeisen",
