Make the docker setup workable
- automatic updates with Watchtower
- reverse proxy via Traefik
- mailing with local (insecure) setup

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,9 @@ https://myedes.io/ghost-on-docker/
 https://github.com/acheremisov/ghost-commento-traefik-in-docker/blob/master/docker-compose.yml
 https://blog.alexellis.io/keeping-shipping-your-blog/
 
+this works:
+https://davejansen.com/ghost-matomo-mariadb-and-traefik-with-ssl-stack/
+
 ---
 
 - Kleinere Schriftgröße
