Add translation for text on 404 page

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,4 +1,6 @@
 {
+    "404_not_found": "Diese Seite existiert nicht... ( •́ﻩ•̀ )"
+
     "category_none": "Weiteres",
     "category_desserts": "Desserts",
     "category_fish_and_meat": "Fisch & Fleisch",
