Fix build error for 404 page

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,5 +1,5 @@
 {
-    "404_not_found": "Diese Seite existiert nicht... ( •́ﻩ•̀ )"
+    "404_not_found": "Diese Seite existiert nicht... ( •́ﻩ•̀ )",
 
     "category_none": "Weiteres",
     "category_desserts": "Desserts",
