Update page outro

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -13,7 +13,7 @@
     "category_appetizers": "Vorspeisen",
     "category_getting_started": "Getting Started",
 
-    "contact_us_via_mail": "Schreib uns unter",
+    "contact_us_via_mail": "Wenn Du Anregungen oder (An-)Fragen hast, schreib mir gerne an: ",
 
     "navbar_categories": "Kategorien",
     "navbar_about": "Über mich",
