Fix startpage for empty content

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,5 +1,6 @@
 {
     "404_not_found": "Diese Seite existiert nicht... ( •́ﻩ•̀ )",
+    "empty_site": "Inhalt kommt noch! Versprochen! ( ⚆ _ ⚆ )",
 
     "category_none": "Weiteres",
     "category_desserts": "Desserts",
