Move /categories route to /recipes

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -16,8 +16,8 @@
 
     "contact_us_via_mail": "Wenn Du Anregungen oder (An-)Fragen hast, schreib mir gerne an: ",
 
-    "navbar_categories": "Kategorien",
     "navbar_about": "Über mich",
+    "navbar_recipes": "Rezepte",
 
     "startpage_more_posts": "Mehr Posts",
 
